# rrdc

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/: pull_request_template.md
.github/workflows/: ci.yml
src/: config.rs  error.rs  lib.rs  main.rs
src/command/: fetch.rs  mod.rs  parse.rs  run.rs  sync.rs
src/domain/: mod.rs  release_date.rs
src/service/: html_parser.rs  http_client.rs  mod.rs
